# coveralls-test

./: .gitignore  .travis.yml  C1.cpp  C1.h  C2.cpp  C2.h  CMakeLists.txt  main.cpp
test/: C1_test.cpp  CMakeLists.txt
